Updated Schematics & Firmware

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -11,12 +11,14 @@
 [env:program_via_ArduinoISP]
 platform = atmelavr
 framework = arduino
-board = attiny24
-board_fuses.lfuse = 0x62
+board = attiny84
+board_fuses.lfuse = 0xfe
 board_fuses.hfuse = 0xdf
 board_fuses.efuse = 0xff
-board_build.f_cpu = 1000000L
-board_hardware.oscillator = internal
+board_build.f_cpu = 20000000L
+build_flags =
+     -D CLOCK_SOURCE=1
+board_hardware.oscillator = external
 upload_protocol = custom
 upload_port = /dev/cu.usbmodem14201
 upload_speed = 19200
